feat: implement summaryProductsByCustomer
